<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HashFaster\'s Pool Status</string>
    <string name="widget_name">HashFaster Widget</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_workers">Workers</string>

    <string name="actionbar_pull2refresh">Pull to refresh</string>
    <string name="actionbar_refreshing">Refreshing…</string>
    <string name="actionbar_release">Release</string>

    <string name="title_activity_ltc">Litecoin</string>
    <string name="title_activity_doge">Dogecoin</string>
    <string name="title_activity_cat">Catcoin</string>
    <string name="title_activity_ftc">Feathercoin</string>
    <string name="title_activity_fst">Fastcoin</string>
    <string name="title_activity_wdc">Worldcoin</string>
    <string name="title_activity_tag">Tagcoin</string>
    <string name="title_activity_gld">Goldcoin</string>
    <string name="title_activity_anc">AnonCoin</string>
    <string name="title_activity_sbc">StableCoin</string>

    <string name="subtitle_activity_ltc"></string>

    <string name="swipe_to_workers">Swipe right to see your workers!</string>
    <string name="error_nointernet">ERROR: Check Internet!</string>
    <string name="error_emptykey">ERROR: Empty API Key, enter one in settings!</string>
    <string name="username">Username</string>
    <string name="total_hashrate">Total Hashrate</string>
    <string name="round_shares">Round Shares</string>
    <string name="balance_confirmed">Confirmed balance</string>
    <string name="balance_pending">Pending</string>
    <string name="pool_stats">Pool Stats</string>
    <string name="pool_efficiency">Pool Efficiency</string>
    <string name="pool_active_workers">Current Active Workers</string>
    <string name="pool_nextnetworkblock">Next Network Block</string>
    <string name="pool_lastblock">Last Block Found</string>
    <string name="pool_networkdiff">Current Difficulty</string>
    <string name="pool_esttime">Est. Avg. Time per Round</string>
    <string name="pool_estshares">Est. Shares this Round</string>
    <string name="pool_timesincelast">Time Since Last Block</string>
    <string name="last_update">Last Update:</string>
    <string name="last_update_icon">Clock</string>
    <string name="about_title">Quick and dirty ltc.hashfaster.com checker\n(based on Ninchuu\'s WeMineLTC checker)</string>
    <string name="dateformat_lastupdate">hh:mm:ss, EEEE, MMMM d, yyyy</string>
    <string name="dateformat_seconds">ss \'seconds\'</string>
    <string name="dateformat_minutes">mm \'minutes\' ss \'seconds\'</string>
    <string name="dateformat_hours">hh \'hours\' mm \'minutes\' ss \'seconds\'</string>
    <string name="dateformat_days">D \'days\' hh \'hours\' mm \'minutes\' ss \'seconds\'</string>

    <string name="obligatory_donation_link">Obligatory donation link:</string>
    <string name="copy_to_clipboard">Copy to Clipboard</string>
    <string name="copied_donation_link">Copied Donation Link!</string>

    <string name="worker_name">Worker Name:</string>
    <string name="worker_hashrate">Hashrate:</string>

    <string name="widget_updated_stats">HashFaster: Updated stats</string>

    <string name="pref_user_authorization">Authorization</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="pref_sync_frequency">Sync frequency</string>
    <string name="pref_sync_frequency_summary">Set the sync frequency</string>
    <string name="pref_api_key">Enter your API Key</string>
    <string name="pref_api_key_summary">Found in My Account/Edit Account</string>
    <string name="pref_pool">Select Pool</string>
    <string name="pref_pool_summary">Set the pool</string>
    <string name="pref_pool_dialog_title">Select pool</string>
    <string name="pref_widget_save">Save</string>

    <string name="pref_error_reporting">Error Reporting</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_acra_syslog">Syslog</string>
    <string name="pref_acra_syslog_enabled">Will be included</string>
    <string name="pref_acra_syslog_disabled">Will not be included</string>
    <string name="pref_acra_user_email">Reply Email</string>
    <string name="pref_acra_user_email_summary">Optional email address for follow ups</string>

    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">CrashTest has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you !</string>

</resources>