<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_update_setting" >
        <ListPreference
            android:dialogTitle="@string/pref_pool_dialog_title"
            android:entries="@array/activity_titles"
            android:entryValues="@array/pool_keys"
            android:key="@string/settings_pool_id"
            android:persistent="false"
            android:title="@string/pref_pool" >
        </ListPreference>
        <ListPreference
            android:defaultValue="300"
            android:entries="@array/syncFrequency"
            android:entryValues="@array/syncFrequencyValues"
            android:key="@string/settings_pool_sync_frequency"
            android:persistent="false"
            android:summary="@string/pref_sync_frequency_summary"
            android:title="@string/pref_sync_frequency" />
    </PreferenceCategory>

</PreferenceScreen>