<uk.co.senab.actionbarpulltorefresh.extras.actionbarsherlock.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ptr_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:id="@+id/information_scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/information_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/tv_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_nointernet"
                android:textColor="#FF0000"
                android:textSize="16sp"
                android:visibility="gone" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <TextView
                android:id="@+id/tv_username"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_hashrate" />

            <TextView
                android:id="@+id/tv_total_hashrate"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_shares" />

            <TextView
                android:id="@+id/tv_round_shares"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_confirmed" />

            <TextView
                android:id="@+id/tv_balance_confirmed"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_pending" />

            <TextView
                android:id="@+id/tv_balance_pending"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dip"
                android:background="#FF00FF00" />

            <TextView
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:paddingTop="10dp"
                android:text="@string/pool_stats" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_hashrate" />

            <TextView
                android:id="@+id/tv_pool_total_hashrate"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pool_efficiency" />

            <TextView
                android:id="@+id/tv_pool_efficiency"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pool_active_workers" />

            <TextView
                android:id="@+id/tv_pool_active_workers"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pool_nextnetworkblock" />

            <TextView
                android:id="@+id/tv_pool_nextnetworkblock"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pool_lastblock" />

            <TextView
                android:id="@+id/tv_pool_lastblock"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pool_networkdiff" />

            <TextView
                android:id="@+id/tv_pool_networkdiff"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pool_esttime" />

            <TextView
                android:id="@+id/tv_pool_esttime"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pool_estshares" />

            <TextView
                android:id="@+id/tv_pool_estshares"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/ViewPagerHeaderSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pool_timesincelast" />

            <TextView
                android:id="@+id/tv_pool_timesincelast"
                style="@style/MainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</uk.co.senab.actionbarpulltorefresh.extras.actionbarsherlock.PullToRefreshLayout>